@startuml
hide empty description

[*] --> InvoiceRegistrationInitiated

InvoiceRegistrationInitiated --> CutoffPerformed
note right of InvoiceRegistrationInitiated 
   send PerformCutoffCommand
end note
InvoiceRegistrationInitiated --> CutoffFailed
CutoffFailed --> CutoffPerformed
CutoffFailed --> CutoffFailed

CutoffPerformed --> InvoiceRegistered
note right of CutoffPerformed 
   send RegisterInvoiceCommand
end note
CutoffPerformed --> InvoiceFailed
InvoiceFailed --> InvoiceRegistered
InvoiceFailed --> InvoiceFailed

CutoffPerformed --> LedgerUpdated : if skip
InvoiceFailed --> LedgerUpdated : if skip

InvoiceRegistered --> LedgerUpdated
note left of InvoiceRegistered 
   send UpdateLedgerCommand
end note
InvoiceRegistered --> LedgerFailed
LedgerFailed --> LedgerUpdated
LedgerFailed --> LedgerFailed

LedgerUpdated --> [*]
note right of LedgerUpdated 
   send SendCommunicationCommand
end note
LedgerUpdated  --> CommunicationFailed
CommunicationFailed --> [*]
CommunicationFailed --> CommunicationFailed
@enduml